moved files to src folder and cleaned up

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,3 +1,6 @@
+extensions-install-from-file {
+	margin-bottom: 30px;
+}
 #extensions-install-from-file #btn-group {
 /*
 	position: absolute;
@@ -8,39 +11,33 @@
 
 #extensions-install-from-file #install-export-extensions {
 	width: 55%;
-	height: 100% margin: 5px;
+	height: 100%; 
+	margin: 5px;
 	float: left;
+	overflow: auto;
 }
 
 #extensions-install-from-file #status-board {
 	width: 40%;
 	height: 100%;
-	margin: 5px;
+	margin: 15px 0 2px 5px;
 	float: right;
 	overflow-y: auto;
 }
 
-#extensions-install-from-file #clear-board {
+#extensions-install-from-file #clear-board,
+#extensions-install-from-file #clear-table {
 	float: right;
 }
 
-#extensions-install-from-file #status-board h4 {
-	float: left;
-	margin: 5px;
+#extensions-install-from-file #loaded-extensions table {
+	margin-bottom: 28px;
 }
 
-#extensions-install-from-file #install-extensions {
-	width: 45%;
-	height: 100px;
-	margin: 5px;
+#extensions-install-from-file #status-board h4,
+#extensions-install-from-file #loaded-extensions h4{
 	float: left;
-}
-
-#extensions-install-from-file #export-extensions {
-	width: 50%;
-	height: 100px;
 	margin: 5px;
-	float: right;
 }
 
 #extensions-install-from-file #loaded-extensions {
